# knots

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
knots/core/: knot.py
knots/serde/raster/: formats.py  thinning.py  vectorize.py
knots/serde/raster/tests/: test_thinning.py  test_vectorize.py
tools/: run-mypy  run-pylint
